--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,8 @@ set-option -g allow-rename off
 
 bind-key j command-prompt -p "join pane from:" "join-pane -s '%%'"
 
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+bind -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
